--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,10 +10,14 @@
             "settings": {
                 "coqtop.startOn": "interaction",
                 "coq.coqProjectRoot": "src",
-                "coqtop.args": ["-w", "-omega-is-deprecated,-implicit-core-hint-db,-deprecated-hint-without-locality,-deprecated-grab-existentials,-undeclared-scope"]
+                "coqtop.args": ["-w", "-omega-is-deprecated,-implicit-core-hint-db,-deprecated-hint-without-locality,-deprecated-grab-existentials,-undeclared-scope"],
+                "files.associations": {
+                    "*.mlg": "ocaml.ocamllex" // workaround for syntax highlighting
+                }
             },
             "extensions": [
-                "coq-community.vscoq1"
+                "coq-community.vscoq1",
+                "ocamllabs.ocaml-platform"
             ]
         }
     }
