--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
             "settings": {
                 "coqtop.startOn": "interaction",
                 "coq.coqProjectRoot": "src",
-                "coqtop.args": ["-w", "-omega-is-deprecated,-implicit-core-hint-db,-deprecated-hint-without-locality,-deprecated-grab-existentials,-undeclared-scope"],
+                "coqtop.args": ["-async-proofs", "off", "-w", "-omega-is-deprecated,-implicit-core-hint-db,-deprecated-hint-without-locality,-deprecated-grab-existentials,-undeclared-scope"],
                 "files.associations": {
                     "*.mlg": "ocaml.ocamllex" // workaround for syntax highlighting
                 }
