--- a/serapitest/bin/dune
+++ b/serapitest/bin/dune
@@ -4,14 +4,8 @@
  (flags
   (:standard -rectypes))
  (libraries
+  serapitest
   sexplib
   coq-serapi.serapi_v8_14
   coq-serapi.sertop_v8_12
   coq-core.lib))
-
-(env
- (dev
-  (flags :standard -warn-error -a))
- (release
-  (flags :standard)
-  (ocamlopt_flags :standard -O3 -unbox-closures)))
